🛡️ SEGURANÇA: API Keys Protegidas com Serverless Functions
✅ PROBLEMA CRÍTICO RESOLVIDO:
• Chaves da Google Gemini API não são mais expostas no frontend
• Implementação de funções serverless para proteção total

🔐 IMPLEMENTAÇÕES DE SEGURANÇA:
• netlify/functions/generate-role.js - Proxy seguro para API
• Detecção automática ambiente (prod vs dev)
• Variáveis de ambiente no servidor (GOOGLE_GEMINI_API_KEY)
• Chaves removidas de todos os arquivos públicos

📚 DOCUMENTAÇÃO:
• SECURITY.md - Guia completo de configuração
• .env.example - Template de variáveis necessárias
• Comentários explicativos no código

🎯 BENEFÍCIOS:
• 🛡️ Chaves invisíveis no navegador
• 🔒 Controle total de acesso
• 🔄 Rotação de chaves sem redeploy
• 📊 Logs e monitoramento seguros

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,25 @@
-# Node (if you later add tooling)
+# Node dependencies
 node_modules/
 .DS_Store
+
+# Environment variables (NUNCA fazer commit das chaves!)
 .env
+.env.local
+.env.production
+.env.development
 
 # OS files
 Thumbs.db
 
 # IDE
 .vscode/
+
+# Build artifacts
+dist/
+build/
+
+# Netlify
+.netlify/
+
+# Local development
+config.local.js
