🔧 SITES CORRIGIDOS E FUNCIONAIS - 24/09/2025
🚨 PROBLEMAS RESOLVIDOS:
- ✅ Sons of Peaky: Scripts quebrados removidos (destinos.js, gerador_role_novo.js)
- ✅ Sons of Peaky: Função initializeGeradorRoles() removida
- ✅ Sons of Peaky: Service worker corrigido
- ✅ Sons of Peaky: Manifest.json atualizado
- ✅ Gerador Roles: Assets copiados (moto-icon.png, hero-banner.jpg, etc)
- ✅ Ambos: Arquivos de teste criados

🛠️ CORREÇÕES TÉCNICAS:
- Referências quebradas eliminadas
- Assets faltantes copiados
- Configurações atualizadas
- Service workers funcionais

📊 STATUS: SITES FUNCIONAIS E TESTÁVEIS

--- a/sons-of-peaky/manifest.json
+++ b/sons-of-peaky/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "Gerador de Rolês de Moto",
-  "short_name": "Gerador Rolês",
-  "description": "IA que cria roteiros personalizados para motociclistas. Descubra destinos únicos, calcule custos e planeje a aventura perfeita.",
+  "name": "Sons of Peaky - Clube de Motos",
+  "short_name": "Sons of Peaky",
+  "description": "Site oficial do clube de motociclistas Sons of Peaky. Unidos pela estrada, fortalecidos pela irmandade.",
   "start_url": "./",
   "display": "standalone",
   "background_color": "#000000",
